@@ -1,5 +1,5 @@
 # Generated by buildout
 MarkupSafe==0.15
 Jinja2==2.7
-setuptools==1.1.6
+setuptools==0.7.2
 execnet==1.1
